--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
